--- a/html/styles.css
+++ b/html/styles.css
@@ -36,13 +36,19 @@
 
 }
 
+.timeline{
+
+    height: 200px;
+
+}
+
 .graphs{
 
     display:grid;
     place-items: center;
 
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 
     grid-auto-columns: 1fr;
     grid-auto-rows: 1fr;
