Attempt to add filter table to clear specific filters

--- a/src/index.css
+++ b/src/index.css
@@ -74,9 +74,12 @@ code {
     font-size: x-small;
 }
 
-.time-label{
+.small-label{
     font-size: small;
-    width: 100%;
+}
+
+.filter-show-button{
+    font-size: xx-small;
 }
 
 
