--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 
 @font-face {
     font-family: mismo;
-    src: url('./fonts/Mismo Campus.ttf');
+    src: url('./fonts/Mismo Regular.ttf');
 }
 
 #header-div{
