--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,42 @@ code {
     src: url('./fonts/Mismo Regular.ttf');
 }
 
+.table-holder{
+    border: 10px solid #2B2B75;
+    background-color: #2B2B75;
+    height: 500px;
+    overflow: auto;
+}
+
+.table-outer{
+    border: 10px solid #2B2B75;
+    background-color: #2B2B75;
+}
+
+table {
+    background-color: #E6E6E6;
+    border: 10px solid #2B2B75;
+    border-collapse:collapse;
+    font-size: medium;
+    color: black;
+    height: auto;
+    width: 100%;
+    display: table;
+    align: center;
+}
+
+th, td {
+    border: 1px solid black;
+}
+
+tr{
+    height: 50px;
+}
+
+th {
+    padding: 10px;
+}
+
 #header-div{
     background-color: #2B2B75;
     font-family: mismo;
