Pagination on the table component

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
 .table-holder{
     border: 10px solid #2B2B75;
     background-color: #2B2B75;
-    height: 500px;
+    max-height: 500px;
     overflow: auto;
 }
 
